Downgraded jQuery UI from 1.10.4 to 1.10.2, which fixes a bad bug with dragging dialogs, as well as a more minor but annoying bug with autocomplete choices flickering when clicking labels. Also fixed the local jQuery version to match the remote jQuery version, 1.7.2. Also, dialogs are 10% transparent now.

--- a/annotations/static/css/annotation_tool.css
+++ b/annotations/static/css/annotation_tool.css
@@ -295,6 +295,11 @@ div.help_section span.help_header {
     margin: 10px 0 10px 20px;   /* t r b l */
 }
 
+/* jQuery-UI dialogs */
+.ui-dialog.ui-widget-content{
+    background: rgba(255,255,255,0.9);
+}
+
 /* jQuery-UI autocomplete menu */
 .ui-menu {
     background: rgba(255,255,255,0.5);
